--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
 
 main {
     /* background-color: #252525; */
-    background-image: url(./src/DSC_0112.jpg);
+    background-image: url(./src/background.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
