--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     font-family: 'PT Sans Caption', sans-serif;
 }
 
+.hidden {
+    overflow: hidden;
+}
+
+.none{
+    display: none !important;
+}
 
 header {
     min-height: 5vh;
@@ -20,7 +27,7 @@ main {
     min-height: 100vh;
 }
 
-.carousel-caption>a{
+.carousel-caption>a {
     display: none;
 }
 
@@ -107,7 +114,7 @@ a {
     font-size: 40px;
 }
 
-h6{
+h6 {
     font-size: 2rem !important;
     margin-bottom: 5px !important;
     background-color: rgba(73, 92, 131, 0.744);
@@ -115,7 +122,7 @@ h6{
     padding: 8px;
 }
 
-.carousel-caption{
+.carousel-caption {
     display: flex !important;
     justify-content: center !important;
     align-items: center !important;
@@ -382,6 +389,52 @@ nav li a {
     text-decoration: none;
 }
 
+.loader {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    transition: 0.5s linear;
+    background-color: #252525;
+    position: absolute;
+    z-index: 100;
+}
+
+.ball {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    animation: bounce6135 1s alternate infinite;
+    transition: 0.5s linear;
+}
+
+.ball {
+    background: #fff;
+}
+
+.ball:nth-child(2) {
+    animation-delay: 0.25s;
+}
+
+.ball:nth-child(3) {
+    animation-delay: 0.5s;
+}
+
+@keyframes bounce6135 {
+    from {
+        transform: scale(2);
+    }
+
+    to {
+        transform: scale(1);
+    }
+}
+
+
+
 @media screen and (max-width: 1340px) {
 
     footer>div {
@@ -394,6 +447,7 @@ nav li a {
     }
 
 }
+
 @media screen and (max-width: 1280px) {
     .main1>h2 {
         text-align: center;
@@ -404,17 +458,17 @@ nav li a {
 
 @media screen and (max-width: 1175px) {
 
-.main1{
-    width: 38vw;
-}
+    .main1 {
+        width: 38vw;
+    }
 
-.skills{
-    width: 80vw;
-}
+    .skills {
+        width: 80vw;
+    }
 
-.carousel {
-    width: 80vw;
-}
+    .carousel {
+        width: 80vw;
+    }
 
 }
 
@@ -479,8 +533,8 @@ nav li a {
         justify-content: flex-end;
         padding-bottom: 5rem;
     }
-    
-    h6{
+
+    h6 {
         font-size: 1rem !important;
     }
 
@@ -505,11 +559,11 @@ nav li a {
         width: 95vw;
     }
 
-    .btn1{
+    .btn1 {
         display: none;
     }
 
-    .carousel-caption>a{
+    .carousel-caption>a {
         display: inline-block;
     }
 }
